force-app/main/default/objects/Bird_Returns_Stake_Compliance_Visit__c.object
<CustomObject>
    <description>Contains compliance data (water depth) for a visit to a particular stake on a site.</description>
    <fields>
        <fullName>Bid_ID__c</fullName>
        <formula>Site_Compliance_Visit__r.Bid_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the bid id for the associated contract.</inlineHelpText>
        <label>Bid ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>XDeprecated: Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tan</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Dry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_ID_Text__c</fullName>
        <label>Contract ID Text</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <description>I can&apos;t tell why this field was created. Removing from layout. Deprecate if determined to be unnecessary.</description>
        <formula>Site_Compliance_Visit__r.Bid_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determined via process (so that it can be used as a filter in aggregating the number of stakes in compliance at the site compliance visit and contract levels).</description>
        <inlineHelpText>Automatically checked when the stake depth in inches is between the min and the max depth outlined on the program period.</inlineHelpText>
        <label>In Compliance?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_Range__c</fullName>
        <formula>if(ispickval(Color__c,&quot;Tan&quot;),&quot;&gt;12&quot;,
text(Min_Level__c) &amp; &quot; - &quot; &amp; text(Max_Level__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XDeprecated: Level Range (Inches)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Level__c</fullName>
        <formula>Case(Color__c, 
&quot;Tan&quot;,null, 
&quot;Green&quot;,12, 
&quot;Black&quot;,10, 
&quot;Yellow&quot;,8, 
&quot;Red&quot;,6, 
&quot;Blue&quot;,4, 
&quot;White&quot;,2, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XDeprecated: Max Level (Inches)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Level__c</fullName>
        <formula>Case(Color__c,
&quot;Tan&quot;,12,
&quot;Green&quot;,10,
&quot;Black&quot;,8,
&quot;Yellow&quot;,6,
&quot;Red&quot;,4,
&quot;Blue&quot;,2,
&quot;White&quot;,0,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XDeprecated: Min Level (Inches)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Compliance_Visit__c</fullName>
        <description>The Site Compliance Visit this Stake Compliance Visit is a part of.</description>
        <inlineHelpText>The Site Compliance Visit this Stake Compliance Visit is a part of.</inlineHelpText>
        <label>Site Compliance Visit</label>
        <referenceTo>Bird_Returns_Site_Compliance_Visit__c</referenceTo>
        <relationshipLabel>Stake Depth Report</relationshipLabel>
        <relationshipName>Stake_Compliance_Visits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stake_Depth_Inches__c</fullName>
        <inlineHelpText>Stake Depth in Inches</inlineHelpText>
        <label>Stake Depth (Inches)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stake_Number__c</fullName>
        <inlineHelpText>Stake number (must be an integer).</inlineHelpText>
        <label>Stake Number</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stake_Report_Date__c</fullName>
        <inlineHelpText>SCVs can be conducted over multiple days. This is the date that this specific stake was recorded.</inlineHelpText>
        <label>Stake Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stake__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Stake that this Stake Depth Report is for. Automatically populated via process.</description>
        <inlineHelpText>A lookup to the stake record associated with this Stake Depth Report. Automatically populated.</inlineHelpText>
        <label>Stake</label>
        <referenceTo>Bird_Returns_Stake__c</referenceTo>
        <relationshipLabel>Stake Depth Report</relationshipLabel>
        <relationshipName>Stake_Compliance_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <formula>Site_Compliance_Visit__r.Visit_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the date that the site compliance visit was completed. May be different from the Stake Report Date if the SCV was conducted over consecutive days.</inlineHelpText>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <label>Stake Depth Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SDR-{000000}</displayFormat>
        <label>Stake Depth Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stake Depth Report</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>